--- a/index.html
+++ b/index.html
@@ -1,68 +1,68 @@
-<!DOCTYPE htmp>
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-<title>La Colmenita</title>
-
-<link rel="icon" href="photos/favicon.ico">
-<link rel="stylesheet" href="css/estilos.css">
-
-<body bgcolor="hex (yellow)">
-
-<h1>La Colmenita</h1>
-
-<img src="photos/fondo.png" alt="fondo.png" width="326" height="166">
-<br>
-<br>
-<a href="index.html">Home</a><a href="Contactanos_aqui.html">Contactanos_aqui</a><a href="Ubicacion.html">Ubicacion</a><a href="Info.html">Informacion</a><a href="Ofertas.html">Ofertas</a>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>La Colmenita</title>
+  <link rel="icon" href="photos/favicon.ico">
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
+<body>
 
+<header>
+  <h1>La Colmenita</h1>
+  <p>La mejor miel 100% natural y artesanal</p>
+</header>
 
+<nav>
+  <a href="#productos">Productos</a>
+  <a href="#nosotros">Sobre Nosotros</a>
+  <a href="#contacto">Contacto</a>
+</nav>
 
+<!-- ABEJAS -->
+<img src="https://images.emojiterra.com/google/noto-emoji/animated-emoji/1f41d.gif" class="bee" style="top: 100px; left: -50px;" alt="abeja volando">
+<img src="https://images.emojiterra.com/google/noto-emoji/animated-emoji/1f41d.gif" class="bee2" style="top: 200px; right: -50px;" alt="abeja volando">
 
+<section class="hero">
+  <div>¡Dulzura Natural!</div>
+  <img src="photos/img1.jpg" alt="Imagen de miel">
+</section>
 
+<section class="content" id="productos">
+  <h2>Nuestros Productos</h2>
+    <div class="product">
+    <h3>Balde de miel 13kg</h3>
+    <p>Miel pura de abeja en grandes cantidades, cosechada de forma sostenible. Perfecta para endulzar por meses.</p>
+    <p><strong>Precio: $16000 ARG</strong></p>
+  </div>
+    <div class="product">
+    <h3>Frasco de Miel 1kg</h3>
+    <p>Ideal para toda la familia. La dulzura natural que tu hogar merece.</p>
+    <p><strong>Precio: $4000 ARG</strong></p>
+  </div>
+  <div class="product">
+    <h3>Frasco de Miel 1/2kg</h3>
+    <p>Perfecta para probar. La dulzura natural que mereces.</p>
+    <p><strong>Precio: $2300 ARG</strong></p>
+  </div>
+</section>
 
+<section class="content" id="nosotros">
+  <h2>Sobre Nosotros</h2>
+  <p>Nuestra miel viene directa del campo,tiene las propiedades de una miel pura,que no la tienen las que estan mezcladas con glucosa.</p>
+</section>
 
+<section class="content" id="contacto">
+  <h2>Contacto</h2>
+  <p>¿Quieres realizar un pedido o tienes alguna duda? Escríbenos:</p>
+  <p>Email: graciela.dibu2019@gmail.com</p>
+  <p>Teléfono: +54 9 2236 24-7571</p>
+</section>
 
-
-
-<br>
-
-
-
-
-<br>
-
-
-<tr>
-
-
-
-
-
-
-<table border="0">
-<tr>
-
-
-
-<img src="photos/img1.jpg" alt="img1.jpg" width="300" height="300">
-
-<p>Nuestra miel viene directa del campo,tiene las propiedades de una miel pura,que no la tienen las que estan mezcladas con glucosa.
-<br>
-<br>
-
-
-
-
-
-
-</tr>
-
-</table>
-
-
-
-
+<footer>
+  &copy; 2025 La Colmenita. Todos los derechos reservados.
+</footer>
 
 </body>
 </html>
