--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>La Colmenita</title>
   <link rel="icon" href="photos/favicon.ico">
   <link rel="stylesheet" href="css/estilos.css">
+    <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="La Colmenita - La mejor miel natural">
+  <meta property="og:description" content="Compra miel pura y natural de apicultores apasionados. 100% miel artesanal, perfecta para tu hogar.">
+  <meta property="og:image" content="https://static8.depositphotos.com/1006323/1004/i/450/depositphotos_10040851-stock-photo-beer-honey-in-honeycombs.jpg"> <!-- Imagen de vista previa -->
+  <meta property="og:url" content="https://la-colmenita.github.io/lacolmenita/"> <!-- URL de la página -->
+  <meta property="og:type" content="website">
 </head>
 <body>
 
