--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>La Colmenita</title>
   <link rel="icon" href="photos/favicon.ico">
   <link rel="stylesheet" href="css/estilos.css">
-    <!-- Open Graph Meta Tags -->
+  <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="La Colmenita - La mejor miel natural">
   <meta property="og:description" content="Compra miel pura y natural de apicultores apasionados. 100% miel artesanal, perfecta para tu hogar.">
   <meta property="og:image" content="https://static8.depositphotos.com/1006323/1004/i/450/depositphotos_10040851-stock-photo-beer-honey-in-honeycombs.jpg"> <!-- Imagen de vista previa -->
@@ -14,6 +14,18 @@
   <meta property="og:type" content="website">
 </head>
 <body>
+
+<div class="resolucion">
+        <div class="desktop">
+            <h1>Esto es un ordenador</h1>
+        </div>
+        <div class="tablet">
+            <h1>Esto es un tablet</h1>
+        </div>
+        <div class="movil">
+            <h1>Esto es un movil</h1>
+        </div>
+    </div>
 
 <header>
   <h1>La Colmenita</h1>
@@ -28,7 +40,7 @@
 
 <!-- ABEJAS -->
 <img src="https://images.emojiterra.com/google/noto-emoji/animated-emoji/1f41d.gif" class="bee" style="top: 100px; left: -50px;" alt="abeja volando">
-<img src="https://images.emojiterra.com/google/noto-emoji/animated-emoji/1f41d.gif" class="bee2" style="top: 200px; right: -50px;" alt="abeja volando">
+<img src="https://images.emojiterra.com/google/noto-emoji/animated-emoji/1f41d.gif" class="bee2" style="top: 200px; right: -100px;" alt="abeja volando">
 
 <section class="hero">
   <div>¡Dulzura Natural!</div>
@@ -40,12 +52,12 @@
     <div class="product">
     <h3>Balde de miel 13kg</h3>
     <p>Miel pura de abeja en grandes cantidades, cosechada de forma sostenible. Perfecta para endulzar por meses.</p>
-    <p><strong>Precio: $16000 ARG</strong></p>
+    <p><strong>Precio: $52000 ARG</strong></p>
   </div>
     <div class="product">
     <h3>Frasco de Miel 1kg</h3>
     <p>Ideal para toda la familia. La dulzura natural que tu hogar merece.</p>
-    <p><strong>Precio: $4000 ARG</strong></p>
+    <p><strong>Precio: $4500 ARG</strong></p>
   </div>
   <div class="product">
     <h3>Frasco de Miel 1/2kg</h3>
