--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="La Colmenita - La mejor miel natural">
   <meta property="og:description" content="Compra miel pura y natural de apicultores apasionados. 100% miel artesanal, perfecta para tu hogar.">
-  <meta property="og:image" content="https://static8.depositphotos.com/1006323/1004/i/450/depositphotos_10040851-stock-photo-beer-honey-in-honeycombs.jpg"> <!-- Imagen de vista previa -->
+  <meta property="og:image" content="https://acdn-us.mitiendanube.com/stores/852/895/products/miel1-1d88dcadf25b98d7e215859422077710-640-0.jpg"> <!-- Imagen de vista previa -->
   <meta property="og:url" content="https://la-colmenita.github.io/lacolmenita/"> <!-- URL de la página -->
   <meta property="og:type" content="website">
 </head>
 <body>
+
+<div class="resolucion">
+        <div class="desktop">
+            <h1>Esto es un ordenador</h1>
+        </div>
+        <div class="tablet">
+            <h1>Esto es un tablet</h1>
+        </div>
+        <div class="movil">
+            <h1>Esto es un movil</h1>
+        </div>
+    </div>
 
 <header>
   <h1>La Colmenita</h1>
@@ -28,7 +40,8 @@
 
 <!-- ABEJAS -->
 <img src="https://images.emojiterra.com/google/noto-emoji/animated-emoji/1f41d.gif" class="bee" style="top: 100px; left: -50px;" alt="abeja volando">
-<img src="https://images.emojiterra.com/google/noto-emoji/animated-emoji/1f41d.gif" class="bee2" style="top: 200px; right: -100px;" alt="abeja volando">
+
+
 
 <section class="hero">
   <div>¡Dulzura Natural!</div>
