--- a/Info.html
+++ b/Info.html
@@ -63,7 +63,7 @@
 <section class="content" id="contacto">
   <h2>Contacto</h2>
   <p>¿Quieres realizar un pedido o tienes alguna duda? Escríbenos:</p>
-  <p>Email: graciela.dibu2019@gmail.com</p>
+  <p>Email: horaciomanetti9@gmail.com</p>
   <p>Teléfono: +54 9 2236 24-7571</p>
 </section>
 
