--- a/Info.html
+++ b/Info.html
@@ -15,10 +15,18 @@
 </head>
 <body>
 
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 <header>
   <h1>La Colmenita</h1>
   <p>La mejor miel 100% natural y artesanal</p>
 </header>
+
+<nav>
+  <a href="#productos">Productos</a>
+  <a href="#nosotros">Sobre Nosotros</a>
+  <a href="#contacto">Contacto</a>
+</nav>
 
 <!-- ABEJAS -->
 <img src="https://images.emojiterra.com/google/noto-emoji/animated-emoji/1f41d.gif" class="bee" style="top: 100px; left: -50px;" alt="abeja volando">
@@ -57,8 +65,11 @@
 <section class="content" id="contacto">
   <h2>Contacto</h2>
   <p>¿Quieres realizar un pedido o tienes alguna duda? Escríbenos:</p>
-  <p>Email: horaciomanetti9@gmail.com</p>
-  <p>Teléfono: +54 9 2236 24-7571</p>
+  <div class="contact-info">
+    <p><i class="fas fa-phone-alt"></i> +54 9 2236 24-7571</p>
+    <p><i class="fas fa-envelope"></i> horaciomanetti9@gmail.com</p>
+  </div>
+</section>
 </section>
 
 <footer>
