--- a/index.html
+++ b/index.html
@@ -9,23 +9,13 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="La Colmenita - La mejor miel natural">
   <meta property="og:description" content="Compra miel pura y natural de apicultores apasionados. 100% miel artesanal, perfecta para tu hogar.">
-  <meta property="og:image" content="https://acdn-us.mitiendanube.com/stores/852/895/products/miel1-1d88dcadf25b98d7e215859422077710-640-0.jpg"> <!-- Imagen de vista previa -->
+  <meta property="og:image" content="https://www.clarin.com/2016/04/14/ByXgGZ54g_1200x0.jpg"> <!-- Imagen de vista previa -->
   <meta property="og:url" content="https://la-colmenita.github.io/lacolmenita/"> <!-- URL de la página -->
   <meta property="og:type" content="website">
 </head>
 <body>
 
-<div class="resolucion">
-        <div class="desktop">
-            <h1>Esto es un ordenador</h1>
-        </div>
-        <div class="tablet">
-            <h1>Esto es un tablet</h1>
-        </div>
-        <div class="movil">
-            <h1>Esto es un movil</h1>
-        </div>
-    </div>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
 <header>
   <h1>La Colmenita</h1>
@@ -75,8 +65,10 @@
 <section class="content" id="contacto">
   <h2>Contacto</h2>
   <p>¿Quieres realizar un pedido o tienes alguna duda? Escríbenos:</p>
-  <p>Email: graciela.dibu2019@gmail.com</p>
-  <p>Teléfono: +54 9 2236 24-7571</p>
+  <div class="contact-info">
+    <p><i class="fas fa-phone-alt"></i> +54 9 2236 24-7571</p>
+    <p><i class="fas fa-envelope"></i> horaciomanetti9@gmail.com</p>
+  </div>
 </section>
 
 <footer>
