--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
 <section class="hero">
-  <div>¡Dulzura Natural!</div>
+  <center><div>¡Dulzura Natural!</div></center>
   <img src="photos/img1.jpg" alt="Imagen de miel">
 </section>
 
