--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <p>¿Quieres realizar un pedido o tienes alguna duda? Escríbenos:</p>
   <div class="contact-info">
     <p><i class="fas fa-phone-alt"></i> +54 9 2236 24-7571</p>
-    <p><i class="fas fa-envelope"></i> horaciomanetti9@gmail.com</p>
+    <p><i class="fas fa-envelope"></i> XXXXXXXXXXXXXXXXXXXXXXXXX</p>
   </div>
 </section>
 
