--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
   <h2>Contacto</h2>
   <p>¿Quieres realizar un pedido o tienes alguna duda? Escríbenos:</p>
   <div class="contact-info">
-    <p><i class="fas fa-phone-alt"></i> +54 9 2236 24-7571</p>
-    <p><i class="fas fa-envelope"></i> XXXXXXXXXXXXXXXXXXXXXXXXX</p>
+    <p><i class="fab fa-whatsapp"></i> +54 9 2236 24-7571</p>
+    <p><i class="fas fa-envelope"></i> XXXXXXXXXXXXXXXX</p>
+	  <p><i class="fas fa-phone"></i> 475-7905 (Teléfono fijo)</p>
   </div>
 </section>
 
