--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <p>¿Quieres realizar un pedido o tienes alguna duda? Escríbenos:</p>
   <div class="contact-info">
     <p><i class="fab fa-whatsapp"></i> +54 9 2236 24-7571</p>
-    <p><i class="fas fa-envelope"></i> XXXXXXXXXXXXXXXX</p>
+    <p><i class="fas fa-envelope"></i> contacto.lacolmenita@gmail.com</p>
 	  <p><i class="fas fa-phone"></i> 475-7905 (Teléfono fijo)</p>
   </div>
 </section>
