--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,12 @@
   <meta property="og:type" content="website">
 </head>
 <body>
+
+<header class="site-header">
+  <div class="logo-container">
+    <img src="photos/icongod.png" alt="Logo de La Colmena" class="logo">
+  </div>
+</header>
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
@@ -40,20 +46,36 @@
 
 <section class="content" id="productos">
   <h2>Nuestros Productos</h2>
-    <div class="product">
-    <h3>Balde de miel 13kg</h3>
-    <p>Miel pura de abeja en grandes cantidades, cosechada de forma sostenible. Perfecta para endulzar por meses.</p>
-    <p><strong>Precio: $52000 ARG</strong></p>
-  </div>
-    <div class="product">
-    <h3>Frasco de Miel 1kg</h3>
-    <p>Ideal para toda la familia. La dulzura natural que tu hogar merece.</p>
-    <p><strong>Precio: $4500 ARG</strong></p>
-  </div>
-  <div class="product">
-    <h3>Frasco de Miel 1/2kg</h3>
-    <p>Perfecta para probar. La dulzura natural que mereces.</p>
-    <p><strong>Precio: $2300 ARG</strong></p>
+
+  <div class="productos-container">
+    <!-- Imagen izquierda -->
+    <div class="side-image">
+      <img src="https://i.gifer.com/FfZc.gif" alt="GIF">
+    </div>
+
+    <!-- Productos -->
+    <div class="products-list">
+      <div class="product">
+        <h3>Balde de miel 13kg</h3>
+        <p>Miel pura de abeja en grandes cantidades, cosechada de forma sostenible. Perfecta para endulzar por meses.</p>
+        <p><strong>Precio: $52000 ARG</strong></p>
+      </div>
+      <div class="product">
+        <h3>Frasco de Miel 1kg</h3>
+        <p>Ideal para toda la familia. La dulzura natural que tu hogar merece.</p>
+        <p><strong>Precio: $4500 ARG</strong></p>
+      </div>
+      <div class="product">
+        <h3>Frasco de Miel 1/2kg</h3>
+        <p>Perfecta para probar. La dulzura natural que mereces.</p>
+        <p><strong>Precio: $2300 ARG</strong></p>
+      </div>
+    </div>
+
+    <!-- Imagen derecha -->
+    <div class="side-image">
+      <img src="https://i.pinimg.com/originals/bc/8d/cf/bc8dcf997a092c39ac280abb9bcd2cb2.gif" alt="GIF">
+    </div>
   </div>
 </section>
 
@@ -68,12 +90,14 @@
   <div class="contact-info">
     <p><i class="fab fa-whatsapp"></i> +54 9 2236 24-7571</p>
     <p><i class="fas fa-envelope"></i> contacto.lacolmenita@gmail.com</p>
-	  <p><i class="fas fa-phone"></i> 475-7905 (Teléfono fijo)</p>
+	<p><i class="fas fa-phone"></i> 475-7905 (Teléfono fijo)</p>
+    <p><i class="fab fa-facebook"></i> XXXXXXXXXXXXXXXXXXXX</p>
+    <p><i class="fab fa-instagram"></i> @XXXXXXXXXXXX</p>
   </div>
 </section>
 
 <footer>
-  &copy; 2025 La Colmenita. Todos los derechos reservados.
+  &copy; 2025 La Colmenita.
 </footer>
 
 </body>
